# Project-Aegis

./: .gitignore  README.md  pyproject.toml
src/aegis/: __init__.py  cli.py  models.py  runner.py
src/aegis/ai/: __init__.py  ollama_client.py
src/aegis/parsers/: __init__.py  valgrind_parser.py
tests/: __init__.py  test_valgrind_parser.py
