[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-aegis"
version = "0.1.0"
description = "CI-friendly leak and low-level defect analyzer for C/C++ binaries"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Project Aegis" }]
dependencies = []

[project.scripts]
aegis = "aegis.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
